Pointer now grabbing

--- a/mjpg-streamer-experimental/plugins/input_xgrab/CMakeLists.txt
+++ b/mjpg-streamer-experimental/plugins/input_xgrab/CMakeLists.txt
@@ -3,4 +3,5 @@ find_library(JPEG_LIB jpeg)
 
 MJPG_STREAMER_PLUGIN_OPTION(input_xgrab "X.org grabbing plugin")
 MJPG_STREAMER_PLUGIN_COMPILE(input_xgrab  jpeg_utils.c input_xgrab.c)
-target_link_libraries (input_xgrab ${X11_LIBRARIES} ${JPEG_LIB}) 
+target_link_libraries (input_xgrab ${X11_LIBRARIES} ${X11_Xfixes_LIB}
+ ${JPEG_LIB})
